#ifndef NETWORKHOST_H
#define NETWORKHOST_H

class NetworkHost
{
public:
    void actAsClient();
    void actAsServer();
};

#endif // NETWORKHOST_H